--- a/client/angular.json
+++ b/client/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/@swimlane/ngx-datatable/themes/bootstrap.css",
               "src/styles.css"
             ],
             "scripts": [
